src/PLASMA/NDDL/test/nddl/error/UnknownTypeForTypedef.nddl

typedef Foo [1 2] NewType;
